--- a/_gulp/package.json
+++ b/_gulp/package.json
@@ -1,7 +1,7 @@
 {
   "name": "R-Funamoto_Gulp_Dart-Sass_EJS",
   "version": "1.0.0",
-  "description": "Dart Sass対応EJS用gulpfile",
+  "description": "Dart Sass対応Pug用gulpfile",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
