--- a/_gulp/package.json
+++ b/_gulp/package.json
@@ -4,6 +4,8 @@
   "description": "Dart Sass対応Pug用gulpfile",
   "main": "index.js",
   "scripts": {
+    "dev": "cross-env NODE_ENV=development gulp",
+    "pro": "cross-env NODE_ENV=production gulp build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -12,6 +14,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.8",
     "browser-sync": "^2.27.10",
+    "cross-env": "^7.0.3",
     "css-declaration-sorter": "^6.3.0",
     "del": "^6.0.0",
     "fs": "^0.0.1-security",
@@ -25,7 +28,6 @@
     "gulp-postcss": "^9.0.1",
     "gulp-pug": "^5.0.0",
     "gulp-sass-glob-use-forward": "^0.1.3",
-    "gulp-sourcemaps": "^3.0.0",
     "imagemin-mozjpeg": "^9.0.0",
     "imagemin-pngquant": "^9.0.1",
     "imagemin-svgo": "^8.0.0"
