--- a/_gulp/package.json
+++ b/_gulp/package.json
@@ -27,6 +27,7 @@
     "gulp-plumber": "^1.2.1",
     "gulp-postcss": "^9.0.1",
     "gulp-pug": "^5.0.0",
+    "gulp-replace": "^1.1.3",
     "gulp-sass-glob-use-forward": "^0.1.3",
     "imagemin-mozjpeg": "^9.0.0",
     "imagemin-pngquant": "^9.0.1",
