--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "r-funamoto_gulp_dart-sass_pug",
+  "name": "r-funamoto_gulp_pug_dart-sass",
   "version": "1.0.0",
-  "description": "Dart Sass対応Pug用gulpfile",
+  "description": "Pug, Dart Sass対応Gulpファイル",
   "main": "index.js",
   "scripts": {
     "dev": "cross-env NODE_ENV=development gulp",
